--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sheikh Salman Ahmed Sabbir</h1>
-    <script src='Chap2/1_Min.js'></script>
-    <script src="Chap2/2_Recursion.js"></script>
-    <script src="Chap2/3_Bean_Counting.js"></script>
-</body>
-</html>
 
+
+
+    <script>
+    let obj={
+        name:"salman",
+        id:'171-15-9398',
+        age:23,
+
+
+    };
+    \
+
+
+
+
+
+
+
+
+
+    </script>
+</body>
